--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
-        "ixudra/curl": "^6.21"
+        "ixudra/curl": "^6.21",
+        "aws/aws-sdk-php": "^3.258"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
