--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,14 @@
     "license": "MIT",
     "require": {
         "php": "^7.3",
+        "aws/aws-sdk-php": "^3.258",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "ixudra/curl": "^6.21",
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
-        "ixudra/curl": "^6.21",
-        "aws/aws-sdk-php": "^3.258"
+        "romanzipp/laravel-queue-monitor": "^2.3"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
