--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,9 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3",
+        "php": "^7.3|^8.0",
         "aws/aws-sdk-php": "^3.258",
+        "edujugon/push-notification": "^5.3",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
@@ -17,7 +18,7 @@
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
         "romanzipp/laravel-queue-monitor": "^2.3",
-        "shiftonelabs/laravel-sqs-fifo-queue": "^2.1"
+        "shiftonelabs/laravel-sqs-fifo-queue": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
